[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
dependencies = [
#  "make87==0.1.0.dev7",
#  "make87_messages",
  "lerobot[async,smolvla] @ git+https://github.com/huggingface/lerobot.git"
]
readme = "README.md"
requires-python = ">=3.9,<3.13"


[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []
